tests/snapshots/sfc/ts/script_setup__v_model_on_component_with_ref_binding_should_not_duplicate_value.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 150
expression: ts_output
---
import { openBlock as _openBlock, createBlock as _createBlock } from "vue"
import { defineComponent as _defineComponent } from 'vue'
import { ref } from 'vue'
import MyInput from './MyInput.vue'


const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const message = ref('hello');
  const __returned__ = { MyInput, message, ref }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createBlock($setup.MyInput, {
    modelValue: $setup.message,
    "onUpdate:modelValue": $event => (($setup.message) = $event)
  }, null, 8 /* PROPS */, ["modelValue", "onUpdate:modelValue"]))
}

__sfc__.render = render
export default __sfc__
