tests/snapshots/sfc/ts/script_setup__v_model_with_named_prop_on_component_with_ref_binding.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 106
expression: ts_output
---
import { openBlock as _openBlock, createBlock as _createBlock } from "vue"

import { defineComponent as _defineComponent } from "vue";
import { ref } from "vue";
import MyEditor from "./MyEditor.vue";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "test",
  setup(__props, { expose: __expose, emit: __emit }) {
    const content = ref("");
    const title = ref("Untitled");
    const __returned__ = {
      MyEditor,
      content,
      ref,
      title
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createBlock($setup.MyEditor, {
    modelValue: $setup.content,
    "onUpdate:modelValue": $event => (($setup.content) = $event),
    title: $setup.title,
    "onUpdate:title": $event => (($setup.title) = $event)
  }, null, 8 /* PROPS */, ["modelValue", "onUpdate:modelValue", "title", "onUpdate:title"]))
}

__sfc__.render = render
export default __sfc__
