tests/snapshots/sfc/ts/script_setup__withdefaults_with_object_type.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 150
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"
import { defineComponent as _defineComponent } from 'vue'


const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const __returned__ = { color, disabled, height, on, outlined }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("button", { disabled: $props.disabled }, "Click", 8 /* PROPS */, ["disabled"]))
}

__sfc__.render = render
export default __sfc__
